--- a/app/fip-2.html
+++ b/app/fip-2.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/fip-page.css">
 
 </head>
 <body>
